--- a/assets/css/variables-mixins/_variables.scss
+++ b/assets/css/variables-mixins/_variables.scss
@@ -11,3 +11,24 @@ $curtain-list-item-span: 31;
         letter-spacing: #{$i*.5}rem;
     }
 }
+
+@mixin sm {
+    @media only screen and (min-width:576px) {
+        @content;
+    }
+}
+@mixin md {
+    @media only screen and (min-width:768px) {
+        @content;
+    }
+}
+@mixin lg {
+    @media only screen and (min-width:992px) {
+        @content;
+    }
+}
+@mixin xl {
+    @media only screen and (min-width:1200px) {
+        @content;
+    }
+}
